--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -753,12 +753,14 @@
                     "type": "string",
                     "enum": [
                         "preserve",
+                        "one",
                         "crate",
                         "module",
                         "item"
                     ],
                     "enumDescriptions": [
                         "Do not change the granularity of any imports and preserve the original structure written by the developer.",
+                        "Merge all imports into a single use statement.",
                         "Merge imports from the same crate into a single use statement. Conversely, imports from different crates are split into separate statements.",
                         "Merge imports from the same module into a single use statement. Conversely, imports from different modules are split into separate statements.",
                         "Flatten imports so that each has its own use statement."
@@ -781,12 +783,14 @@
                     "enum": [
                         "plain",
                         "self",
-                        "crate"
+                        "crate",
+                        "absolute"
                     ],
                     "enumDescriptions": [
                         "Insert import paths relative to the current module, using up to one `super` prefix if the parent module contains the requested item.",
                         "Insert import paths relative to the current module, using up to one `super` prefix if the parent module contains the requested item. Prefixes `self` in front of the path if it starts with a module.",
-                        "Force import paths to be absolute by always starting them with `crate` or the extern crate name they come from."
+                        "Force import paths to be absolute by always starting them with `crate` or the extern crate name they come from.",
+                        "Force import paths to be absolute by always starting them with `crate` or the fully-qualified crate name they come from."
                     ]
                 },
                 "rust-analyzer.inlayHints.bindingModeHints.enable": {
