--- a/editors/code/package.json
+++ b/editors/code/package.json
@@ -783,14 +783,12 @@
                     "enum": [
                         "plain",
                         "self",
-                        "crate",
-                        "absolute"
+                        "crate"
                     ],
                     "enumDescriptions": [
                         "Insert import paths relative to the current module, using up to one `super` prefix if the parent module contains the requested item.",
                         "Insert import paths relative to the current module, using up to one `super` prefix if the parent module contains the requested item. Prefixes `self` in front of the path if it starts with a module.",
-                        "Force import paths to be absolute by always starting them with `crate` or the extern crate name they come from.",
-                        "Force import paths to be absolute by always starting them with `crate` or the fully qualified crate name they come from."
+                        "Force import paths to be absolute by always starting them with `crate` or the extern crate name they come from."
                     ]
                 },
                 "rust-analyzer.inlayHints.bindingModeHints.enable": {
